# treasure-client

./: Cargo.toml  index.html
src/: ametheed.rs  components.rs  lib.rs  pages.rs  subject.rs  systems.rs
src/ametheed/: eg_impl.rs
src/ametheed/assets/: dyn_format.rs  loader.rs  mod.rs  prefab.rs  progress.rs  reload.rs  storage.rs  system.rs  timing.rs
src/ametheed/core/: hidden.rs  mod.rs
src/ametheed/core/transform/components/: parent.rs
src/ametheed/error/: mod.rs
src/ametheed/ui/: colored_box.rs  drag.rs  event.rs  event_retrigger.rs  layout.rs  mod.rs  prefab.rs  selection.rs  text.rs  transform.rs  widgets.rs
src/ametheed/ui/button/: actions.rs  builder.rs  mod.rs  retrigger.rs  system.rs
src/pages/: cg_graph.rs  login.rs  subjects.rs
src/pages/cg_graph/: ecs.rs  ecs_stuff.rs
src/pages/cg_graph/ecs/: components.rs  systems.rs
