[package]
name = "client"
version = "0.1.0"
authors = ["Ben-PH <benphawke@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = {git = "https://github.com/seed-rs/seed.git"}
wasm-bindgen = "0.2"
