[package]
name = "client"
version = "0.1.0"
authors = ["Ben-PH <benphawke@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = {git = "https://github.com/seed-rs/seed.git"}
shared = {path = "../shared"}
crossbeam-queue = "0.2"
dyn-clone = "1.0"
wasm-bindgen = "0.2"
serde = {version = "*", features = ["rc"]}
instant = {version = "0.1", features = ["wasm-bindgen", "now"]}
erased-serde = "0.3"
ron = "0.6"
paste = "1.0"
nalgebra = "0.22"
petgraph = "0.5.1"
bson = "1.0.0"
specs = { version = "0.16.0", default-features = false, features = ["shred-derive", "specs-derive"] }
specs-hierarchy = "0.6.0"
smallvec = "1.2"
# winit = {version = "0.22", features = ["stdweb"], default = false}
# font-kit = "0.5"
derivative = "2.1.1"
derive-new = "0.5.6"
backtrace = "0.3"
rand = "0.7"
# amethyst_derive = "0.15.3"
parking_lot = "0.11"
